# inetmock

./: .dockerignore  .drone.yml  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .golangci.yml  .goreleaser.yml  .ko.yaml  .pre-commit-config.yaml  .theme-source  Dockerfile  LICENSE  Makefile  README.md  Taskfile.yml  buf.gen.yaml  buf.yaml  config-container.yaml  config.yaml  go.mod  go.sum  go.work  go.work.sum  main.go  mock_config.yaml  proxy_config.yaml  renovate.json
.agola/: config.yml
.concourse/: branch-tracker.yml  branch-validate.yml  housekeeping.yml  pipeline.yml  release.yml
.gitlab/: .gitlab-webide.yml
.run/: imctl.run.xml  inetmock.run.xml
api/: .editorconfig  README.md  buf.yaml  endpoints.proto  handlers.proto  health.proto
deploy/: inetmock.default  inetmock.service
docs/: Makefile  book.toml
magefiles/: build.go  common.go  format.go  generate.go  integration_tests.go  lint.go  reporting.go  test.go  tools.go
mock/: protocol_handler_mock.go
multiplexing/: http_matchers.go  http_matchers_test.go  request_parsing.go
netflow/: config.go  config_test.go  conn_track.go  conn_track_test.go  conn_track_types.go  conversion.go  ebpf_types_test.go  epoch.go  epoch_test.go  features.go  firewall.go  firewall_test.go  firewall_types.go  logging.go  map.go  map_test.go  map_types.go  metrics.go  mocks_test.go  nat.go  nat_test.go  noise_test.go  packet_sink.go  pools.go  (+13 more)
netflow/ebpf/: .editorconfig  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  common.h  compile_commands.json  firewall.c  helpers.h  nat.c  tests.c  types.h
(+647 files in other folders)
